# cohere-transcribe-finetune

./: .gitignore  README.md  pyproject.toml
evaluate/: evaluation_on_hf_dataset_cohere.py
train/: fine-tune_on_hf_dataset_all_config.py
